@@ -1,11 +1,13 @@
 Current Version: @@VERSION@@
 
-ctags-5.2.4 (Sun Apr 14 2002)
+ctags-5.2.4 (Tue May 14 2002)
+* Changed to using _tempnam() to create temporary files on Windows, allowing
+  "TMP" environment variable to set temporary directory.
 * Added support for RISC OS platform, contributed by Andrew Wingate.
 * Added support for "#pragma weak", generating macro tags for weak symbols [C].
 * Fixed portability problem [MingW32, Bug #541997].
 * Fixed bug in configure script [Solaris, Bug #542966].
-* Fixed invalid package name tags [Perl].
+* Fixed invalid package name tags [Perl, Bug #535068].
 * Fixed spurious tag for clients portion of feature clause when following
   an empty feature clause [Eiffel].
 
